<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_clasificacion" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/clasification" />
        <item android:id="@+id/nav_alarma_sleep" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/alarm_sleep" />
        <item android:id="@+id/nav_favoritos" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/favorites" />
        <item android:id="@+id/nav_ra" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/ra_finder" />
        <item android:id="@+id/nav_noticias" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/news" />
        <item android:id="@+id/nav_radios" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/radio" />
        <item android:id="@+id/nav_calendario" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/cal" />
        <item android:id="@+id/nav_entradas" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/tickets" />
    </group>

</menu>